# watersupplyassessment

./: .gitignore  Git协作流程.md  README.md
Agent/: .gitignore  BACKEND_DEVELOPMENT_PLAN.md  DEPLOYMENT_V1.md  init-recipient.ps1  start-mac.sh  start.bat  start.ps1  start_frontend_silent.py  (+8 more)
Agent/backend/: .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  start_backend_silent.py  start_hidden_process.py
Agent/backend/alembic/versions/: 20260624_add_score_source_mapping.py  20260713_add_record_owner_isolation.py  20260713_add_secure_user_auth.py
Agent/backend/app/: main.py
Agent/backend/app/api/: agent.py  auth.py  dashboard.py  mobile.py  records.py  reports.py  standards.py  uploads.py
Agent/backend/app/core/: config.py  schema.py  security.py  storage.py
Agent/backend/app/data/: payment_basis.json  project_standards.json
Agent/backend/app/data/report_source_format/: maonan-structure.json  template-index.md  yunan-legacy-structure.json
Agent/backend/app/models/: __init__.py  entities.py
Agent/backend/app/repositories/: __init__.py
Agent/backend/app/schemas/: __init__.py  auth.py  records.py
Agent/backend/app/services/: __init__.py  agent.py  assessment_ingest.py  payment.py  payment_basis.py  payment_context.py  project_catalog.py  project_standards.py  report_dataset.py  report_tasks.py  reporting.py  review.py  scoring_policy.py  seed.py  standard_catalog.py  standard_names.py  standard_validation.py
Agent/backend/app/workers/: celery_app.py  tasks.py
(+143 files in other folders)
