[project]
name = "watersupply-assessment-backend"
version = "0.1.0"
description = "Backend API for the rural sewage PPP assessment frontends."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
  "python-docx>=1.1.0",
  "pymupdf>=1.24.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "celery[redis]>=5.4.0",
  "pydantic-settings>=2.3.4",
  "httpx>=0.28.0",
]

[tool.uvicorn]
factory = false
